# rtbot-sql

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yaml  release.yaml
apps/cli/: BUILD.bazel
apps/cli/include/: args.h
apps/cli/src/: args.cpp  main.cpp
docs/: sql-reference.md
docs/reference/: clauses.md  error-handling.md  execution-model.md  functions.md  joins-and-composition.md  overview.md  programming-patterns.md  statements.md  worked-examples.md
examples/: catalog.json
examples/notebooks/: cold_chain_fleet_operations_cockpit.ipynb  download_cicids2017.sh  download_data.sh  network_intrusion_detection.ipynb  smoke_test.py  trade_surveillance_universal_sql_patterns.ipynb
examples/queries/: band_summary.sql  bollinger.sql  instrument_stats.sql  live_stats.sql  order_stats.sql  order_trends.sql  three_level_chain.sql  vol_trends.sql
libs/analyzer/: BUILD.bazel
libs/analyzer/include/rtbot_sql/analyzer/: scope.h
libs/analyzer/src/: scope.cpp
libs/api/: BUILD.bazel
libs/api/include/rtbot_sql/: version.h
libs/api/include/rtbot_sql/api/: compiler.h  types.h
libs/api/src/: compiler.cpp  version_test.cpp
libs/catalog/: BUILD.bazel
libs/catalog/include/rtbot_sql/catalog/: catalog.h
libs/catalog/src/: catalog.cpp
libs/compiler/: BUILD.bazel
libs/compiler/include/rtbot_sql/compiler/: alias_expander.h  expr_cache.h  expression_compiler.h  function_compiler.h  graph_builder.h  group_by_compiler.h  select_compiler.h  where_compiler.h
libs/compiler/src/: alias_expander.cpp  expr_cache.cpp  expression_compiler.cpp  function_compiler.cpp  graph_builder.cpp  group_by_compiler.cpp  select_compiler.cpp  where_compiler.cpp
libs/parser/: BUILD.bazel
libs/parser/include/rtbot_sql/parser/: ast.h  ast_converter.h  parser.h
libs/parser/src/: ast_converter.cpp  parser.cpp
libs/planner/: BUILD.bazel
libs/planner/include/rtbot_sql/planner/: classifier.h  evaluator.h  planner.h
libs/planner/src/: classifier.cpp  evaluator.cpp  planner.cpp
runtimes/browser/: BUILD.bazel  bindings.cpp  package.json  tsconfig.bazel.json  tsconfig.json
runtimes/browser/src/: catalog.ts  formatter.ts  index.ts  pipeline_runner.ts  stream_store.ts  types.ts
runtimes/browser/test/: BUILD.bazel  rtbot_sql.test.ts  tsconfig.bazel.json
runtimes/python/: BUILD.bazel  DESCRIPTION.md  sql_bindings.cpp
runtimes/python/rtbot_sql/: __init__.py  catalog.py  compiler.py  formatter.py  jupyter.py  pipeline_runner.py  runtime.py  stream_store.py
runtimes/python/test/: rtbot_sql_test.py
tests/cross_runtime/: queries.json  test_python.py
tests/integration/: BUILD.bazel  compiler_integration_test.cpp  correlation_debug_test.cpp  e2e_runtime_test.cpp  scenarios_e2e_test.cpp  view_chaining_test.cpp
tests/unit/: BUILD.bazel  alias_expander_test.cpp  catalog_test.cpp  dedup_test.cpp  evaluator_test.cpp  expression_test.cpp  function_test.cpp  group_by_test.cpp  having_test.cpp  parser_test.cpp  plan_test.cpp  scope_test.cpp  select_test.cpp  tier_test.cpp  types_test.cpp  view_test.cpp  where_test.cpp
tools/: BUILD.bazel  libpg_query.BUILD  workspace_status.bat  workspace_status.sh
tools/release/: install.sh
