# Root BUILD file for rtbot-sql

load("@rtbot_sql_npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

exports_files([
    "package.json",
    "pnpm-lock.yaml",
])

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "sql-reference",
    srcs = ["docs/sql-reference.md"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "sql-reference-pages",
    srcs = glob(["docs/reference/*.md"]),
    visibility = ["//visibility:public"],
)
