module(
    name = "rtbot-sql",
    version = "0.1.0",
)

# --- Core dependencies ---

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")

# --- libpg_query (SQL parser) ---

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libpg_query",
    build_file = "//tools:libpg_query.BUILD",
    sha256 = "e68962c18dbf5890821511be6c5c42261170bf8bfd51a82ea9176069f3d0df8b",
    strip_prefix = "libpg_query-17-6.2.2",
    urls = ["https://github.com/pganalyze/libpg_query/archive/refs/tags/17-6.2.2.tar.gz"],
)

# --- rtbot dependency ---
# Will be added once rtbot has a MODULE.bazel or via a module extension
# (similar to platform's rtbot_ext.bzl). For now the compiler library
# has no rtbot dependency — operator JSON is plain strings.
#
# bazel_dep(name = "rtbot", version = "...")
# local_path_override(module_name = "rtbot", path = "../rtbot")
