module(
    name = "rtbot-sql",
    version = "0.1.0",
)

# --- Core dependencies ---

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_python", version = "1.3.0")

# --- Python toolchain ---

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_3_11_host")

# --- libpg_query (SQL parser) ---

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "libpg_query",
    build_file = "//tools:libpg_query.BUILD",
    sha256 = "e68962c18dbf5890821511be6c5c42261170bf8bfd51a82ea9176069f3d0df8b",
    strip_prefix = "libpg_query-17-6.2.2",
    urls = ["https://github.com/pganalyze/libpg_query/archive/refs/tags/17-6.2.2.tar.gz"],
)

# --- nlohmann/json (JSON parsing for AST conversion) ---

http_archive(
    name = "json-cpp",
    build_file = "//tools/external:json-cpp.BUILD",
    sha256 = "95651d7d1fcf2e5c3163c3d37df6d6b3e9e5027299e6bd050d157322ceda9ac9",
    strip_prefix = "json-3.11.2",
    url = "https://github.com/nlohmann/json/archive/refs/tags/v3.11.2.zip",
)

# --- cxxopts (CLI argument parsing) ---

http_archive(
    name = "cxxopts",
    build_file = "//tools/external:cxxopts.BUILD",
    sha256 = "25b644a2bfa9c6704d723be51b026bc02420dfdee1277a49bfe5df3f19b0eaa4",
    strip_prefix = "cxxopts-3.1.1",
    url = "https://github.com/jarro2783/cxxopts/archive/refs/tags/v3.1.1.zip",
)

# --- pybind11 ---

http_archive(
    name = "pybind11",
    build_file = "//tools/external:pybind11.BUILD",
    integrity = "sha256-sBGnMMiEW/wmXw+B7k5enh01TfOQg20qJYgOEj0CH4k=",
    strip_prefix = "pybind11-2.11.1",
    urls = ["https://github.com/pybind/pybind11/archive/v2.11.1.zip"],
)

# --- Emscripten SDK (WASM compilation) ---

emsdk_version = "4.0.15"

bazel_dep(name = "emsdk", version = emsdk_version)
git_override(
    module_name = "emsdk",
    remote = "https://github.com/emscripten-core/emsdk.git",
    strip_prefix = "bazel",
    tag = emsdk_version,
)

emscripten_deps = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps")
use_repo(
    emscripten_deps,
    "emscripten_bin_linux",
    "emscripten_bin_linux_arm64",
    "emscripten_bin_mac",
    "emscripten_bin_mac_arm64",
    "emscripten_bin_win",
)

emscripten_cache = use_extension("@emsdk//:emscripten_cache.bzl", "emscripten_cache")
use_repo(emscripten_cache, "emscripten_cache")

register_toolchains(
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_linux_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_mac_arm64",
    "@emsdk//emscripten_toolchain:cc-toolchain-wasm-emscripten_win",
)

# --- JS/TS toolchain ---

bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.1.0")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")
bazel_dep(name = "aspect_rules_swc", version = "2.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    name = "rtbot_sql_npm_typescript",
    ts_version_from = "//:package.json",
)
use_repo(
    rules_ts_ext,
    npm_typescript = "rtbot_sql_npm_typescript",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "rtbot_sql_npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "rtbot_sql_npm")

# --- rtbot dependency ---
bazel_dep(name = "rtbot", version = "0.0.0")
local_path_override(module_name = "rtbot", path = "../rtbot")
