load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

package(default_visibility = ["//visibility:public"])

exports_files(["sql_bindings.cpp"])

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:arm64",
    ],
)

py_library(
    name = "rtbot_sql_py",
    srcs = glob(["rtbot_sql/**/*.py"]),
    imports = ["."],
)

cc_binary(
    name = "_rtbot_sql_native.so",
    srcs = ["sql_bindings.cpp"],
    copts = select({
        "@pybind11//:msvc_compiler": [],
        "//conditions:default": [
            "-fexceptions",
            "-fvisibility=hidden",
        ],
    }),
    linkopts = select({
        "@pybind11//:msvc_compiler": [],
        "@pybind11//:osx": [],
        "//conditions:default": ["-Wl,-Bsymbolic"],
    }),
    linkshared = 1,
    deps = [
        "//libs/api:api_compiler",
        "@rtbot//libs/api:rtbot-api",
        "@pybind11",
        "@python_3_11//:python_headers",
        "@python_3_11//:libpython",
    ],
)

genrule(
    name = "native_module_in_package",
    srcs = [":_rtbot_sql_native.so"],
    outs = ["rtbot_sql/_rtbot_sql_native.so"],
    cmd = "cp $(location :_rtbot_sql_native.so) $@",
)

py_library(
    name = "rtbot_sql",
    data = [":native_module_in_package"],
    deps = [":rtbot_sql_py"],
)

py_package(
    name = "rtbot_sql_pkg",
    deps = [":rtbot_sql"],
)

_WHEEL_PLATFORM = select({
    ":macos_arm64": "macosx_11_0_arm64",
    ":macos_x86_64": "macosx_10_14_x86_64",
    ":linux_arm64": "manylinux2014_aarch64",
    ":linux_x86_64": "manylinux2014_x86_64",
    ":windows_x86_64": "win_amd64",
    ":windows_arm64": "win_arm64",
    "//conditions:default": "any",
})

_WHEEL_MATRIX = [
    {"tag": "cp312", "python_repo": "@python_3_12"},
    {"tag": "cp313", "python_repo": "@python_3_13"},
]

[cc_binary(
    name = "_rtbot_sql_native_%s.so" % _entry["tag"],
    srcs = ["sql_bindings.cpp"],
    copts = select({
        "@pybind11//:msvc_compiler": [],
        "//conditions:default": [
            "-fexceptions",
            "-fvisibility=hidden",
        ],
    }),
    linkopts = select({
        "@pybind11//:msvc_compiler": [],
        "@pybind11//:osx": [],
        "//conditions:default": ["-Wl,-Bsymbolic"],
    }),
    linkshared = 1,
    deps = [
        "//libs/api:api_compiler",
        "@rtbot//libs/api:rtbot-api",
        "@pybind11",
        "%s//:python_headers" % _entry["python_repo"],
        "%s//:libpython" % _entry["python_repo"],
    ],
) for _entry in _WHEEL_MATRIX]

[genrule(
    name = "native_module_in_package_%s" % _entry["tag"],
    srcs = [":_rtbot_sql_native_%s.so" % _entry["tag"]],
    outs = ["%s/rtbot_sql/_rtbot_sql_native.so" % _entry["tag"]],
    cmd = "cp $(location :_rtbot_sql_native_%s.so) $@" % _entry["tag"],
) for _entry in _WHEEL_MATRIX]

[py_library(
    name = "rtbot_sql_%s" % _entry["tag"],
    data = [":native_module_in_package_%s" % _entry["tag"]],
    deps = [":rtbot_sql_py"],
) for _entry in _WHEEL_MATRIX]

[py_package(
    name = "rtbot_sql_pkg_%s" % _entry["tag"],
    deps = [":rtbot_sql_%s" % _entry["tag"]],
) for _entry in _WHEEL_MATRIX]

[py_wheel(
    name = "rtbot_sql_wheel_%s" % _entry["tag"],
    abi = _entry["tag"],
    author = "Katenaria",
    author_email = "services@katenaria.com",
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: Other/Proprietary License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Scientific/Engineering",
    ],
    description_file = "//runtimes/python:DESCRIPTION.md",
    distribution = "rtbot-sql",
    homepage = "https://rtbot.dev",
    license = "Proprietary",
    platform = _WHEEL_PLATFORM,
    project_urls = {
        "Documentation": "https://rtbot.dev/docs",
        "Source": "https://github.com/rtbot-dev/rtbot-sql",
    },
    python_tag = _entry["tag"],
    python_requires = ">=3.12",
    strip_path_prefixes = [
        "runtimes/python/%s" % _entry["tag"],
        "runtimes/python",
    ],
    summary = "Real-time SQL computation engine for streaming numerical data",
    version = "{STABLE_RTBOT_SQL_VERSION}",
    stamp = 1,
    deps = [":rtbot_sql_pkg_%s" % _entry["tag"]],
) for _entry in _WHEEL_MATRIX]

[alias(
    name = "rtbot_sql_whl_%s" % _entry["tag"],
    actual = ":rtbot_sql_wheel_%s.dist" % _entry["tag"],
) for _entry in _WHEEL_MATRIX]

py_test(
    name = "runtime_test",
    srcs = ["test/rtbot_sql_test.py"],
    main = "test/rtbot_sql_test.py",
    deps = [":rtbot_sql"],
)
