cc_test(
    name = "compiler_integration_test",
    srcs = ["compiler_integration_test.cpp"],
    deps = [
        "//libs/api:api_compiler",
        "@json-cpp//:lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "view_chaining_test",
    srcs = ["view_chaining_test.cpp"],
    deps = [
        "//libs/api:api_compiler",
        "@json-cpp//:lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "e2e_runtime_test",
    srcs = ["e2e_runtime_test.cpp"],
    deps = [
        "//libs/api:api_compiler",
        "@rtbot//libs/api:rtbot-api",
        "@json-cpp//:lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "correlation_debug_test",
    srcs = ["correlation_debug_test.cpp"],
    deps = [
        "//libs/api:api_compiler",
        "@rtbot//libs/api:rtbot-api",
        "@json-cpp//:lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "scenarios_e2e_test",
    srcs = ["scenarios_e2e_test.cpp"],
    deps = [
        "//libs/api:api_compiler",
        "@rtbot//libs/api:rtbot-api",
        "@json-cpp//:lib",
        "@com_google_googletest//:gtest_main",
    ],
)
