cc_test(
    name = "parser_test",
    srcs = ["parser_test.cpp"],
    deps = [
        "//libs/parser",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "types_test",
    srcs = ["types_test.cpp"],
    deps = [
        "//libs/api",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "catalog_test",
    srcs = ["catalog_test.cpp"],
    deps = [
        "//libs/catalog",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "scope_test",
    srcs = ["scope_test.cpp"],
    deps = [
        "//libs/analyzer",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "expression_test",
    srcs = ["expression_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "where_test",
    srcs = ["where_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "function_test",
    srcs = ["function_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "select_test",
    srcs = ["select_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "group_by_test",
    srcs = ["group_by_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "having_test",
    srcs = ["having_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "dedup_test",
    srcs = ["dedup_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "tier_test",
    srcs = ["tier_test.cpp"],
    deps = [
        "//libs/planner",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "evaluator_test",
    srcs = ["evaluator_test.cpp"],
    deps = [
        "//libs/planner",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "plan_test",
    srcs = ["plan_test.cpp"],
    deps = [
        "//libs/planner",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "view_test",
    srcs = ["view_test.cpp"],
    deps = [
        "//libs/api:api_compiler",
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "alias_expander_test",
    srcs = ["alias_expander_test.cpp"],
    deps = [
        "//libs/compiler",
        "@com_google_googletest//:gtest_main",
    ],
)
